[package]
name = "xp_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.18.0"
winit = { version = "0.29.9", features = ["rwh_05"] }
